# kigumi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: agent_capacity.py
docs/: adoption.md
docs/contracts/: agent-capacity.md  agent-node.md  cache-key.md  (+12 more)
kigumi/: __init__.py  _declarations.py  _execution.py  _pi_bridge.ts  _pi_bridge_policy.mjs  _runstate.py  _version.py  agents.py  artifacts.py  bench.py  blobs.py  calling.py  cli.py  config.py  dag.py  enforce.py  errors.py  evals.py  evidence.py  failures.py  inspect.py  optimize.py  pi.py  profile.py  prompt.py  repair.py  retry.py  slots.py  store.py  subgraph.py  testing.py  transport.py  views.py
scripts/: smoke_installed.py  verify_dist.py
tests/: _agent_helpers.py  _dag_helpers.py  test_agent_attachments.py  test_agent_capacity.py  test_agent_contract.py  test_artifacts.py  test_bench.py  test_blobs.py  test_cache_policy.py  test_calling.py  test_cli.py  test_concurrency.py  test_config.py  test_consumes.py  test_dag.py  test_dag_agent.py  test_dag_agent_failures.py  test_dag_cache_keys.py  test_dag_checkpoints.py  test_dag_context.py  test_dag_describe_render.py  test_dag_map.py  test_dag_plan_explain.py  test_dag_registration.py  test_dag_retry_resume.py  test_dag_run.py  test_dag_scan.py  test_dag_store_blobs.py  test_enforce.py  test_evals.py  test_evidence.py  test_execution.py  test_experiment_subjects.py  test_failures.py  test_inspect.py  test_optimize.py  test_output_ownership.py  test_pi_first.py  test_pi_live.py  test_prompt.py  (+10 more)
(+12 files in other folders)
