[project]
name = "kigumi"
dynamic = ["version"]
description = "Load-bearing joinery for LLM content pipelines: context injection, validated repair loops, deterministic replay, DAG orchestration."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["llm", "llm-pipelines", "dag", "deterministic-replay", "content-addressed-cache"]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
litellm = [
    "litellm>=1.60",
]
dev = [
    "pytest>=8.0",
    "ruff==0.16.0",
]

[project.urls]
Repository = "https://github.com/Oxidane-bot/kigumi"
Changelog = "https://github.com/Oxidane-bot/kigumi/blob/master/CHANGELOG.md"

[project.scripts]
kigumi = "kigumi.cli:main"

[project.entry-points.pytest11]
kigumi = "kigumi.testing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "kigumi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["kigumi"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/assets", "examples", ".github", "scripts", "tmp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: test making real external requests",
]
